Clean-up and upload